--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -145,6 +145,14 @@
   ::-webkit-scrollbar-thumb:hover {
     background: rgba(0, 0, 0, 0.3);
   }
+
+  /* .scrollbar-hide {
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none; 
+  } */
 }
 
 html,
